Fix ProfileDescription overflow

--- a/src/app/components/home-profil/home-profil.component.css
+++ b/src/app/components/home-profil/home-profil.component.css
@@ -44,6 +44,7 @@
   text-align: left;
   color: white;
   padding: 10px 20px;
+  overflow-y: scroll;
 }
 
 .ImgCol{
